--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -14,6 +14,7 @@
 <div class="container">
     <div id="chat">
     </div>
+    <div class="chat-instruction">Chat here</div>
     <div class="chat-input">
         <div id="input-box" class="input-box" contenteditable="true"></div>
     </div>
