--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,6 +12,14 @@
 
 
 <div class="container">
+    <div id="header">
+        <div id="logo">chrGPT</div>
+
+        <div class="header-inner">1</div>
+        <div class="header-inner">2</div>
+        <div class="header-inner">3</div>
+        <div class="header-inner">4</div>
+    </div>
     <div id="chat">
     </div>
     <div class="chat-instruction">Chat here</div>
