--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,10 +15,11 @@
     <div id="header">
         <div id="logo">chrGPT</div>
 
-        <div class="header-inner">1</div>
-        <div class="header-inner">2</div>
-        <div class="header-inner">3</div>
-        <div class="header-inner">4</div>
+        <div class="header-inner">_chat</div>
+        <div class="header-inner">_summarize</div>
+        <div class="header-inner">_code analysis</div>
+        <div class="header-inner">_document q&a</div>
+        <div class="header-inner"></div>
     </div>
     <div id="chat">
     </div>
