--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,26 +6,26 @@
     <link rel="stylesheet" href="/static/js/app.css">
     <link rel="stylesheet" href='/static/main.css'/>
     <script type="module" src="/static/js/app.js"></script>
-    <title>xGPT</title>
+    <title>fuji</title>
 </head>
 <body>
 
 
 <div class="container">
     <div id="header">
-        <div id="logo">chrGPT</div>
+<!--        <div id="logo">chrGPT</div>-->
 
-        <div class="header-inner">_chat</div>
+        <div class="header-inner selected">_chat</div>
         <div class="header-inner">_summarize</div>
-        <div class="header-inner">_code analysis</div>
-        <div class="header-inner">_document q&a</div>
-        <div class="header-inner"></div>
+        <div class="header-inner">_code</div>
+        <div class="header-inner">_doc</div>
+        <div class="header-inner">fuji</div>
     </div>
     <div id="chat">
     </div>
     <div class="chat-instruction">Chat here</div>
     <div class="chat-input">
-        <div id="input-box" class="input-box" contenteditable="true"></div>
+        <div id="input-box" class="input-box" contenteditable="true" data-text="Type here..."></div>
     </div>
 </div>
 
