CLean up after breaking changes in llama.cpp and langchain

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,26 +1,22 @@
-<!--  how to use css in python_ flask-->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="/static/js/app.css">
     <link rel="stylesheet" href='/static/main.css'/>
     <script type="module" src="/static/js/app.js"></script>
-    <title>fuji</title>
+    <title>chronosGPT</title>
 </head>
 <body>
 
-
+<div id="header">
+<!--    <div class="header-inner">_chat</div>-->
+<!--    <div class="header-inner">_summarize</div>-->
+<!--    <div class="header-inner">_code</div>-->
+<!--    <div class="header-inner">_doc</div>-->
+    <div class="header-inner"><strong>chronos</strong>GPT</div>
+</div>
 <div class="container">
-    <div id="header">
-<!--        <div id="logo">chrGPT</div>-->
 
-        <div class="header-inner selected">_chat</div>
-        <div class="header-inner">_summarize</div>
-        <div class="header-inner">_code</div>
-        <div class="header-inner">_doc</div>
-        <div class="header-inner">fuji</div>
-    </div>
     <div id="chat">
     </div>
     <div class="chat-instruction">Chat here</div>
