--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1,3 +1,11 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+html {
+    margin: 0;
+    padding: 0;
+}
 body {
     font-size: 1rem;
     font-family: sans-serif;
@@ -21,37 +29,39 @@ body {
 }
 
 
-.message:before {
-    content: "X";
-    position: absolute;
-    top: 17px;
-    left: calc(10vw - 48px);
-    background-color: rgb(88, 185, 157);
-    color: white;
-    font-size: 0.8rem;
-    font-weight: lighter;
-    border-radius: 4px;
-    width: 22px;
-    height: 22px;
-    line-height: 24px;
-    text-align: center;
-}
+/*.message:before {*/
+/*    content: "X";*/
+/*    position: absolute;*/
+/*    top: 17px;*/
+/*    left: calc(10vw - 48px);*/
+/*    background-color: rgb(88, 185, 157);*/
+/*    !*#FFABA0*!*/
+/*    !**!*/
+/*    color: white;*/
+/*    font-size: 0.8rem;*/
+/*    font-weight: lighter;*/
+/*    border-radius: 4px;*/
+/*    width: 22px;*/
+/*    height: 22px;*/
+/*    line-height: 24px;*/
+/*    text-align: center;*/
+/*}*/
 
 .from-them {
     background-color: rgb(247, 247, 248);
 }
 
-.from-them:before {
-    content: "AI";
-}
+/*.from-them:before {*/
+/*    !*content: "AI";*!*/
+/*}*/
 
 .from-me {
     background-color: white;
 }
 
-.from-me:before {
-    content: "ME";
-}
+/*.from-me:before {*/
+/*    !*content: "ME";*!*/
+/*}*/
 
 pre {
     margin-top: 0;
@@ -87,14 +97,16 @@ pre code {
     cursor: pointer;
 }
 #header {
+    z-index: 2;
     height: 48px;
     line-height: 48px;
     /*padding-top: 16px;*/
-    padding-bottom: 16px;
+    /*padding-bottom: 16px;*/
     display: flex;
     margin: auto;
     width: 80vw;
     background-color: white;
+    /*position: fixed;*/
 }
 #logo {
     margin-right: 16px;
@@ -115,7 +127,7 @@ pre code {
 }
 
 #chat {
-    max-height: calc(100vh - 120px - 64px);
+    max-height: calc(100vh - 240px);
     overflow: scroll;
 }
 
@@ -152,4 +164,31 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+
+.loading {
+    /*font-size: 30px;*/
+}
+
+.loading:after {
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: bottom;
+    -webkit-animation: ellipsis steps(4, end) 900ms infinite;
+    animation: ellipsis steps(4, end) 900ms infinite;
+    content: "\2026"; /* ascii code for the ellipsis character */
+    width: 0;
+}
+
+@keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
+}
+
+@-webkit-keyframes ellipsis {
+    to {
+        width: 1.25em;
+    }
 }
