--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,8 +12,22 @@
 <!--    <div class="header-inner">_chat</div>-->
 <!--    <div class="header-inner">_summarize</div>-->
 <!--    <div class="header-inner">_code</div>-->
-<!--    <div class="header-inner">_doc</div>-->
     <div class="header-inner"><strong>chronos</strong>GPT</div>
+    <div class="header-inner">
+
+        <label>
+            <strong>model</strong>:
+            <select id="model-change">
+                <option selected value="vicuna-13b">vicuna-13b</option>
+                <option value="alpaca-lora-65B.ggml.q5_0">alpaca-lora-65B.ggml.q5_0</option>
+                <option value="gpt4-alpaca-lora-30B.ggml.q5_0">gpt4-alpaca-lora-30B.ggml.q5_0</option>
+                <option value="OpenAssistant-30B-epoch7.ggml.q5_0">OpenAssistant-30B-epoch7.ggml.q5_0</option>
+            </select>
+        </label>
+
+
+    </div>
+
 </div>
 <div class="container">
 
