--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -19,6 +19,7 @@
             <strong>model</strong>:
             <select id="model-change">
                 <option selected value="vicuna-13b">vicuna-13b</option>
+                <option value="wizard-vicuna-13B.ggml.q5_0">wizard-vicuna-13B.ggml.q5_0</option>
                 <option value="alpaca-lora-65B.ggml.q5_0">alpaca-lora-65B.ggml.q5_0</option>
                 <option value="gpt4-alpaca-lora-30B.ggml.q5_0">gpt4-alpaca-lora-30B.ggml.q5_0</option>
                 <option value="OpenAssistant-30B-epoch7.ggml.q5_0">OpenAssistant-30B-epoch7.ggml.q5_0</option>
