--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -37,6 +37,10 @@
     <div class="chat-instruction">Chat here</div>
     <div class="chat-input">
         <div id="input-box" class="input-box" contenteditable="true" data-text="Type here..."></div>
+        <button id="stop-generating" disabled="disabled">
+            Stop generating
+        </button>
+
     </div>
 </div>
 
