--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -15,13 +15,14 @@
         <label>
             <strong>model</strong>:
             <select id="model-change">
-                <option selected value="wizard-vicuna-13B.ggml.q5_0">wizard-vicuna-13B.ggml.q5_0</option>
-                <option value="alpaca-lora-65B.ggml.q5_0">alpaca-lora-65B.ggml.q5_0</option>
                 <option value="vicuna-13b">vicuna-13b</option>
+                <option selected value="wizard-vicuna-13B.ggml.q5_0">wizard-vicuna-13B.ggml.q5_0</option>
+                <option value="stable-vicuna-13B.ggml.q5_0">stable-vicuna-13B.ggml.q5_0</option>
+                <option value="WizardML-Unc-13b-Q5_1">WizardML-Unc-13b-Q5_1</option>
                 <option value="gpt4-alpaca-lora-30B.ggml.q5_0">gpt4-alpaca-lora-30B.ggml.q5_0</option>
                 <option value="OpenAssistant-30B-epoch7.ggml.q5_0">OpenAssistant-30B-epoch7.ggml.q5_0</option>
                 <option value="h2ogptq-oasst1-512-30B.ggml.q5_0">h2ogptq-oasst1-512-30B.ggml.q5_0</option>
-                <option value="stable-vicuna-13B.ggml.q5_0">stable-vicuna-13B.ggml.q5_0</option>
+                <option value="alpaca-lora-65B.ggml.q5_0">alpaca-lora-65B.ggml.q5_0</option>
             </select>
         </label>
     </div>
