--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -42,12 +42,65 @@
             Stop generating
         </button>
         <div class="footer">
-            <a href="/about" id="help-button">about</a>
+            <a href="#popup1" id="help-button">Help</a>
         </div>
 
     </div>
 
 </div>
 
+
+<div id="popup1" class="overlay">
+    <div class="popup">
+        <h2>Help</h2>
+        <a class="close" href="#">&times;</a>
+        <div class="content">
+            <div>
+                <div>
+                    <h1>Issues?</h1>
+                    Open issue on <a href="gitea.cry/wengert/chronosGPT"
+                                     target="_blank">gitea.cry/wengert/chronosGPT</a>
+                </div>
+                <div>
+                    <h1>Questions?</h1>
+                    Ask <a href="mailto:wengert@yoda.cry">wengert@yoda.cry</a>
+                </div>
+                <div>
+                    <h1>Models</h1>
+                    In general: More parameters are better, but slower.
+                    <ul>
+                        <li>vicuna-13b</li>
+                        <li>wizard-vicuna-13B.ggml.q5_0: default</li>
+                        <li>stable-vicuna-13B.ggml.q5_0</li>
+                        <li>WizardML-Unc-13b-Q5_1: Uncensored...no "As an AI model I cannot". Good for building Molotov
+                            cockatilas
+                        </li>
+                        <li>gpt4-alpaca-lora-30B.ggml.q5_0</li>
+                        <li>OpenAssistant-30B-epoch7.ggml.q5_0</li>
+                        <li>h2ogptq-oasst1-512-30B.ggml.q5_0</li>
+                        <li>alpaca-lora-65B.ggml.q5_0</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h1>News</h1>
+                    <ul>
+                        <li>10.5.2023 Simple chronosGPT online</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h1>Coming up next</h1>
+                    <ul>
+                        <li>Make text generation cancellable</li>
+                        <li>Document embedding (i.e. ask your PDF)</li>
+                        <li>Source code embedding (i.e. ask your code)</li>
+                        <li>More models</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
