--- a/server/static/js/app.css
+++ b/server/static/js/app.css
@@ -1,4 +1,4 @@
-/* node_modules/highlight.js/styles/github-dark-dimmed.css */
+/* node_modules/highlight.js/styles/github.css */
 pre code.hljs {
   display: block;
   overflow-x: auto;
@@ -8,8 +8,8 @@ code.hljs {
   padding: 3px 5px;
 }
 .hljs {
-  color: #adbac7;
-  background: #22272e;
+  color: #24292e;
+  background: #fff;
 }
 .hljs-doctag,
 .hljs-keyword,
@@ -18,13 +18,13 @@ code.hljs {
 .hljs-template-variable,
 .hljs-type,
 .hljs-variable.language_ {
-  color: #f47067;
+  color: #d73a49;
 }
 .hljs-title,
 .hljs-title.class_,
 .hljs-title.class_.inherited__,
 .hljs-title.function_ {
-  color: #dcbdfb;
+  color: #6f42c1;
 }
 .hljs-attr,
 .hljs-attribute,
@@ -36,65 +36,66 @@ code.hljs {
 .hljs-selector-class,
 .hljs-selector-id,
 .hljs-variable {
-  color: #6cb6ff;
+  color: #005cc5;
 }
 .hljs-meta .hljs-string,
 .hljs-regexp,
 .hljs-string {
-  color: #96d0ff;
+  color: #032f62;
 }
 .hljs-built_in,
 .hljs-symbol {
-  color: #f69d50;
+  color: #e36209;
 }
 .hljs-code,
 .hljs-comment,
 .hljs-formula {
-  color: #768390;
+  color: #6a737d;
 }
 .hljs-name,
 .hljs-quote,
 .hljs-selector-pseudo,
 .hljs-selector-tag {
-  color: #8ddb8c;
+  color: #22863a;
 }
 .hljs-subst {
-  color: #adbac7;
+  color: #24292e;
 }
 .hljs-section {
-  color: #316dca;
+  color: #005cc5;
   font-weight: 700;
 }
 .hljs-bullet {
-  color: #eac55f;
+  color: #735c0f;
 }
 .hljs-emphasis {
-  color: #adbac7;
+  color: #24292e;
   font-style: italic;
 }
 .hljs-strong {
-  color: #adbac7;
+  color: #24292e;
   font-weight: 700;
 }
 .hljs-addition {
-  color: #b4f1b4;
-  background-color: #1b4721;
+  color: #22863a;
+  background-color: #f0fff4;
 }
 .hljs-deletion {
-  color: #ffd8d3;
-  background-color: #78191b;
+  color: #b31d28;
+  background-color: #ffeef0;
 }
 /*! Bundled license information:
 
-highlight.js/styles/github-dark-dimmed.css:
+highlight.js/styles/github.css:
   (*!
-    Theme: GitHub Dark Dimmed
-    Description: Dark dimmed theme as seen on github.com
+    Theme: GitHub
+    Description: Light theme as seen on github.com
     Author: github.com
     Maintainer: @Hirse
     Updated: 2021-05-15
   
-    Colors taken from GitHub's CSS
+    Outdated base version: https://github.com/primer/github-syntax-light
+    Current colors taken from GitHub's CSS
   *)
 */
 /*# sourceMappingURL=app.css.map */
