--- a/server/static/main.css
+++ b/server/static/main.css
@@ -82,8 +82,8 @@ pre code {
 
 .code-header {
     display: flex;
-    background-color: rgb(52, 53, 65);
-    color: white;
+    color: rgb(52, 53, 65);
+    background-color: rgb(235, 235, 240);
     padding: 4px 1em;
     font-size: 0.8rem;
     line-height: 16px;
@@ -242,4 +242,57 @@ a:visited {
 #help-button {
     margin: auto;
 
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 60%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+.popup h1 {
+    margin-top: 2rem;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.popup h2 {
+  margin-top: 0;
+  color: #333;
+}
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #06D85F;
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
 }
