--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -58,8 +58,7 @@
             <div>
                 <div>
                     <h1>Issues?</h1>
-                    Open issue on <a href="gitea.cry/wengert/chronosGPT"
-                                     target="_blank">gitea.cry/wengert/chronosGPT</a>
+                    Open issue on <a href="http://gitea.cry/wengert/chronosGPT" target="_blank">gitea.cry/wengert/chronosGPT</a>
                 </div>
                 <div>
                     <h1>Questions?</h1>
