--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -17,11 +17,12 @@
             <select id="model-change">
                 <option value="vicuna-13b">vicuna-13b</option>
                 <option selected value="wizard-vicuna-13B.ggml.q5_0">wizard-vicuna-13B.ggml.q5_0</option>
+                <option value="Wizard-Vicuna-13B-Uncensored.ggml.q5_0">Wizard-Vicuna-13B-Uncensored.ggml.q5_0</option>
                 <option value="stable-vicuna-13B.ggml.q5_0">stable-vicuna-13B.ggml.q5_0</option>
-                <option value="WizardML-Unc-13b-Q5_1">WizardML-Unc-13b-Q5_1</option>
-                <option value="gpt4-alpaca-lora-30B.ggml.q5_0">gpt4-alpaca-lora-30B.ggml.q5_0</option>
-                <option value="OpenAssistant-30B-epoch7.ggml.q5_0">OpenAssistant-30B-epoch7.ggml.q5_0</option>
                 <option value="h2ogptq-oasst1-512-30B.ggml.q5_0">h2ogptq-oasst1-512-30B.ggml.q5_0</option>
+                <option value="OpenAssistant-SFT-7-Llama-30B.ggml.q5_0">OpenAssistant-SFT-7-Llama-30B.ggml.q5_0</option>
+                <option value="gpt4-alpaca-lora_mlp-65B.ggml.q5_0">gpt4-alpaca-lora_mlp-65B.ggml.q5_0</option>
+                <option value="dromedary-lora-65B.ggml.q5_0">dromedary-lora-65B.ggml.q5_0</option>
                 <option value="alpaca-lora-65B.ggml.q5_0">alpaca-lora-65B.ggml.q5_0</option>
             </select>
         </label>
