--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -40,7 +40,11 @@
             Stop generating
         </button>
         <div class="footer">
-            <a href="#popup1" id="help-button">Help</a>
+            <div class="footer-buttons">
+                <a href="#popup1" id="help-button">Help</a>
+<!--                |-->
+<!--                <a href="#popup2" id="settings-button">Settings</a>-->
+            </div>
         </div>
 
     </div>
@@ -99,5 +103,22 @@
         </div>
     </div>
 </div>
+
+<!--<div id="popup2" class="overlay">-->
+<!--    <div class="popup">-->
+<!--        <h2>Settings</h2>-->
+<!--        <a class="close" href="#">&times;</a>-->
+<!--        <div class="content">-->
+<!--            <div>-->
+<!--                <h1>Temperature</h1>-->
+<!--                <div>-->
+<!--                    <label>-->
+<!--                        <input id="temperature-setting" type="number" min="0" max="2" step="0.1" value="0.8">-->
+<!--                    </label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 </body>
 </html>
