--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -42,6 +42,8 @@
         <div class="footer">
             <div class="footer-buttons">
                 <a href="#popup1" id="help-button">Help</a>
+                |
+                <a href="#" id="reset-button">Reset</a>
 <!--                |-->
 <!--                <a href="#popup2" id="settings-button">Settings</a>-->
             </div>
