sql started, but have a problem with too large prompts (ctx)

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -296,3 +296,15 @@ a:visited {
   max-height: 30%;
   overflow: auto;
 }
+
+
+pre code.hljs {
+  display: block;
+}
+
+
+code.inline {
+    display: inline;
+    font-family: monospace, "Courier New";
+    font-weight: bold;
+}
