--- a/server/static/main.css
+++ b/server/static/main.css
@@ -331,3 +331,25 @@ code.inline {
     font-family: monospace, "Courier New";
     font-weight: bold;
 }
+label {
+
+    font-weight: bold;
+
+}
+form > div {
+    margin-bottom: 2rem;
+}
+input[type=text] {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  /*font-size: 16px;*/
+  background-color: white;
+
+  padding: 8px;
+}
+
+button {
+    padding: 4px;
+}
