rename to local

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" href="/static/js/app.css">
     <link rel="stylesheet" href='/static/main.css'/>
     <script type="module" src="/static/js/app.js"></script>
-    <title>chronosGPT</title>
+    <title>{{name}}GPT</title>
 </head>
 <body>
 
 <div id="header">
-    <div class="header-inner"><a href="/" id="logo-link"><strong>chronos</strong>GPT</a></div>
+    <div class="header-inner"><a href="/" id="logo-link"><strong>{{name}}</strong>GPT</a></div>
     <div class="header-inner">
         <label>
             <strong>Model</strong>:
@@ -69,7 +69,7 @@
             <div>
                 <div>
                     <h1>Issues?</h1>
-                    Open issue on <a href="http://gitea.cry/wengert/chronosGPT" target="_blank">gitea.cry/wengert/chronosGPT</a>
+                    Open issue on <a href="http://gitea.cry/wengert/{{name}}GPT" target="_blank">gitea.cry/wengert/{{name}}GPT</a>
                 </div>
                 <div>
                     <h1>Questions?</h1>
@@ -98,7 +98,7 @@
                     <h1>News</h1>
                     <ul>
                         <li>15.5.2023 Changed all models because of breaking change in the library</li>
-                        <li>10.5.2023 Simple chronosGPT online</li>
+                        <li>10.5.2023 Simple {{name}}GPT online</li>
                     </ul>
                 </div>
 
