--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -77,8 +77,8 @@
                 </div>
                 <div>
                     <h1>Models</h1>
-                    In general: More parameters are better, but slower. Uncensored models have (almost) no ethical or
-                    moral barriers. Use at your own risk.
+                    In general: More parameters are better, but slower (scales +/- linearly with number of parameters).
+                    Uncensored models have (almost) no ethical or moral barriers. Use at your own risk.
                     <ul>
                         {% for name in models %}
                         <li> {{ name }}
