--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -105,7 +105,7 @@
                 <div>
                     <h1>Models</h1>
                     In general: More parameters are better, but slower (scales +/- linearly with number of parameters).
-                    Uncensored models have (almost) no ethical or moral barriers. Use at your own risk.
+                    Most models here are uncensored models have (almost) no ethical or moral barriers. Use at your own risk (or to build some Molotov cocktails).
                     <ul>
                         {% for name in models %}
                         <li> {{ name }}
@@ -124,6 +124,8 @@
                 <div>
                     <h1>News</h1>
                     <ul>
+                        <li>25.5.2023 New models</li>
+                        <li>25.5.2023 New models</li>
                         <li>15.5.2023 Changed all models because of breaking change in the library</li>
                         <li>10.5.2023 Simple {{name}}GPT online</li>
                     </ul>
