--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -205,7 +205,11 @@
                 <form method="post" enctype="multipart/form-data" id="upload-sql">
                     <div>
                         <label>
-                            Choose files (please provide a sqlite file)<br>
+                            Choose files (please provide a sqlite file)
+                            <br><br>
+                            <strong>This is very experimental. Please contact WEN.</strong>
+                            <br><br>
+
                             <input id="sql-file" type="file" required>
                         </label>
                     </div>
