Give another note

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -177,6 +177,9 @@
                     <div>
                         <label>
                             Give a name to this job
+                            <br><br>
+                            <strong>This currently works best for Python. If you want to test other languages, please contact WEN</strong>
+                            <br><br>
                             <input type="text" value="" placeholder="Give me a name" id="code-jobname" required>
                         </label>
                     </div>
