Give another note

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -154,7 +154,10 @@
                 <form method="post" enctype="multipart/form-data" id="upload-pdf">
                     <div>
                         <label>
-                            Choose files<br>
+                            Choose a PDF file
+                            <br><br>
+                            <strong>If you need analysis for other text based formats, contact WEN</strong>
+                            <br><br>
                             <input id="pdf-file" type="file" accept="application/pdf" required>
                         </label>
                     </div>
