--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -78,7 +78,8 @@
                 <a href="#popup3" id="source-qa-button">Source code</a>
                 &nbsp;|&nbsp;
                 <a href="#popup4" id="sql-qa-button">SQL</a>
-
+                &nbsp;|&nbsp;
+                <a href="#popup5" id="translate-button">Translate</a>
 
 
                 <a href="#popup1" id="help-button">Help</a>
@@ -223,6 +224,39 @@
                         <button>Submit</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="popup5" class="overlay">
+    <div class="popup">
+        <h2>Upload</h2>
+        <a class="close" href="#">&times;</a>
+        <div class="content">
+            <div>
+<!--                <form method=post enctype=multipart/form-data>-->
+                <form action='/translate' method="post" enctype="multipart/form-data">
+                    <div>
+                        <label>
+                            Upload a text file to translate
+                            <br><br>
+                            <strong></strong>
+                            <br><br>
+                            <input id="file" name="file" type="file" required>
+                        </label>
+                    </div>
+                    <div>
+                        <input type="submit" value="Submit">
+                    </div>
+                </form>
+
+
+<!--                <form action="/translate" method=post enctype=multipart/form-data>-->
+<!--                  <input type=file name=file>-->
+<!--                  <input type=submit value=Upload>-->
+<!--                </form>-->
+
             </div>
         </div>
     </div>
