--- a/server/templates/translate.html
+++ b/server/templates/translate.html
@@ -48,10 +48,10 @@
         <div id="input-box" class="input-box">
             <input id="file" name="file" type="file" required>
         </div>
-<!--        <button id="stop-generating" disabled="disabled">-->
-<!--            Stop generating-->
-<!--            <span class="loading"></span>-->
-<!--        </button>-->
+        <button id="stop-generating" disabled="disabled">
+            Stop generating
+            <span class="loading"></span>
+        </button>
         <div class="footer">
             <div class="footer-buttons">
                 <a href="/">Back to Chat</a>
