llama.cpp server

--- a/server/templates/translate.html
+++ b/server/templates/translate.html
@@ -55,7 +55,7 @@
         <div class="footer">
             <div class="footer-buttons">
                 <a href="/">Back to Chat</a>
-                <a href="#popup1" id="help-button">Help</a>
+                <a href="#popupHelp" id="help-button">Help</a>
             </div>
         </div>
     </div>
