--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1,3 +1,7 @@
+
+* {
+    box-sizing: border-box;
+}
 html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -159,6 +163,17 @@ pre code {
     margin-left: 10%;
 }
 
+
+input, textarea {
+    min-height: 24px;
+    line-height: 24px;
+    border: 1px solid rgb(222, 222, 223);
+    border-radius: 4px;
+    /*padding: 4px 8px;*/
+    text-align: right;
+    /*box-shadow: 5px 5px 15px 5px rgb(247, 247, 248);;*/
+}
+
 .input-box {
     margin: auto;
     width: 80vw;
@@ -278,13 +293,49 @@ a:visited {
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
+  /*transition: opacity 500ms;*/
   visibility: hidden;
   opacity: 0;
 }
 .overlay:target {
   visibility: visible;
   opacity: 1;
+}
+#settings-form > div {
+    width: 100%;
+    display: flex;
+    margin-bottom: 0.2rem;
+}
+.param-help {
+    margin-bottom: 1.5rem !important;
+    color: #6a737d;
+    font-size: smaller;
+}
+#settings-form > div> label {
+    display: inline-block;
+    width: 200px;
+}
+
+#settings-form > div>input, textarea {
+    margin-left: auto;
+    width: 200px;
+    padding: 4px;
+    border-radius: 5px;
+}
+
+#settings-form > div>input[type=text], textarea {
+    text-align: left;
+}
+
+#settings-form {
+    width: calc(100% - 20px);
+}
+
+.scroll-content {
+
+    /*max-height: 80vh;*/
+    overflow: scroll;
+    max-height: 70vh;
 }
 
 .popup {
@@ -295,7 +346,11 @@ a:visited {
   width: 60%;
   position: relative;
   transition: all 5s ease-in-out;
+    max-height: 80vh;
+    overflow: hidden;
+
 }
+
 .popup h1 {
     margin-top: 2rem;
     font-size: 1rem;
@@ -367,4 +422,16 @@ button {
 #wait::backdrop {
     background-color: rgba(19, 19, 19, 0.5);
 
+}
+
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+/* For Chrome, Safari, Edge */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
