--- a/server/templates/common/popups/help.html
+++ b/server/templates/common/popups/help.html
@@ -1,4 +1,4 @@
-<div id="popup1" class="overlay">
+<div id="popupHelp" class="overlay">
     <div class="popup">
         <h2>Help</h2>
         <a class="close" href="#">&times;</a>
